variables.Variables.scala.error
Erreur de compilation :
Variables:-9: error: Unmatched closing brace '}' ignored here
	}
        ^Variables:-7: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Variables:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^