variables.Variables.scala.code
var nbPas = 0
var dejaFait = 0
if (estSurBiscuit()) {
  prendBiscuit();
  while (dejaFait != nbPas) {
  recule();
  }
}else {
  avance ();
	nbPas += 1;
	}
poseBiscuit();
  
}